==> rlcamp/samd51_sdcard/samd51_sdcard.c <==
#include "samd51_sdcard.h"
#include <samd51.h>
#include <samd.h>
#include <assert.h>
#include <stddef.h>
#define BAUD_RATE_SLOW 250000
#define BAUD_RATE_FAST (F_CPU / 2)
#define IDMA_SPI_WRITE 2

static void cs_high(void) {
    PORT->Group[0].OUTSET.reg = 1U << 14;
}

static void cs_low(void) {
    PORT->Group[0].OUTCLR.reg = 1U << 14;
}

static uint8_t spi_receive_one_byte_with_rx_enabled(void) {
    SERCOM1->SPI.LENGTH.reg = (SERCOM_SPI_LENGTH_Type) { .bit.LENEN = 1, .bit.LEN = 1 }.reg;
    while (SERCOM1->SPI.SYNCBUSY.bit.LENGTH);

    SERCOM1->SPI.DATA.bit.DATA = 0xff;
    while (!SERCOM1->SPI.INTFLAG.bit.RXC);
    return SERCOM1->SPI.DATA.bit.DATA;
}

static void wait_for_card_ready(void) {
    SERCOM1->SPI.CTRLB.bit.RXEN = 1;
    while (SERCOM1->SPI.SYNCBUSY.bit.CTRLB);

    /* loop until card pulls MISO high for a full byte worth of clocks */
    while (spi_receive_one_byte_with_rx_enabled() != 0xff);
}

static uint32_t spi_receive_uint32be(void) {
    SERCOM1->SPI.LENGTH.reg = (SERCOM_SPI_LENGTH_Type) { .bit.LENEN = 0 }.reg;
    while (SERCOM1->SPI.SYNCBUSY.bit.LENGTH);

    SERCOM1->SPI.CTRLB.bit.RXEN = 1;
    while (SERCOM1->SPI.SYNCBUSY.bit.CTRLB);

    SERCOM1->SPI.DATA.bit.DATA = 0xffffffff;
    while (!SERCOM1->SPI.INTFLAG.bit.RXC);
    const uint32_t bits = SERCOM1->SPI.DATA.bit.DATA;

    return __builtin_bswap32(bits);
}

int spi_sd_init(void) {
    /* spin for the recommended 1 ms, assuming each loop iteration takes at least 2 cycles */
    for (size_t idelay = 0; idelay < F_CPU / 2048; idelay++) asm volatile("" :::);

    /* and then clock out at least 74 cycles at 100-400 kBd with cs pin held high */
    spi_init(BAUD_RATE_SLOW);
    spi_send((unsigned char[10]) { [0 ... 9] = 0xFF }, 10);

    unsigned baud_rate_denominator = 2;

    /* cmd0 */
    for (size_t ipass = 0;; ipass++) {
        /* attempt multiple baud rates */
        while (1) {
            cs_low();
            spi_sd_baud_rate_achieved = F_CPU / baud_rate_denominator;
            spi_change_baud_rate(F_CPU / baud_rate_denominator);
            if (-1 == wait_for_card_ready_with_timeout(262144)) {
                cs_high();
                baud_rate_denominator += 2;
                if (baud_rate_denominator > 16) return -1;
                else continue;
            }
            break;
        }

        /* send cmd0 */
        const uint8_t cmd0_r1_response = command_and_r1_response(0, 0);
        cs_high();

        if (0x01 == cmd0_r1_response) break;

        /* if card likely not present, give up */
        if (1024 == ipass && 255 == cmd0_r1_response) return -1;
    }

    /* cmd8 */
    while (1) {
        cs_low();
        wait_for_card_ready();

        const uint8_t r1_response = command_and_r1_response(8, 0x1AA);

        if (0x1 != r1_response) {
            cs_high();
            continue;
        }

        const uint32_t response = spi_receive_uint32be();
        cs_high();

        if (0x1AA == response) break;
    }

    /* cmd55, then acmd41 */
    while (1) {
        cs_low();
        wait_for_card_ready();

        const uint8_t cmd55_r1_response = command_and_r1_response(55, 0);
        cs_high();

        if (cmd55_r1_response > 1) continue;

        cs_low();
        wait_for_card_ready();

        const uint8_t acmd41_r1_response = command_and_r1_response(41, 1U << 30);
        cs_high();

        if (!acmd41_r1_response) break;
    }

    /* cmd58 */
    while (1) {
        cs_low();
        wait_for_card_ready();

        const uint8_t r1_response = command_and_r1_response(58, 0);

        if (r1_response > 1) {
            cs_high();
            continue;
        }

        const unsigned int ocr = spi_receive_uint32be();
        (void)ocr;
        cs_high();

        break;
    }

    /* cmd16 */
    while (1) {
        cs_low();
        wait_for_card_ready();

        const uint8_t r1_response = command_and_r1_response(16, 512);
        cs_high();

        if (r1_response <= 1) break;
    }

#if 1
    /* cmd59 */
    while (1) {
        cs_low();
        wait_for_card_ready();

        const uint8_t r1_response = command_and_r1_response(59, 1);

        cs_high();

        if (r1_response <= 1) break;
    }
#endif

    return 0;
}

int spi_sd_read_blocks(void * buf, unsigned long blocks, unsigned long long block_address) {
    cs_low();
    wait_for_card_ready();

    /* send cmd17 or cmd18 */
    if (command_and_r1_response(blocks > 1 ? 18 : 17, block_address) != 0) return -1;

    SERCOM1->SPI.CTRLB.bit.RXEN = 1;
    while (SERCOM1->SPI.SYNCBUSY.bit.CTRLB);

    /* clock out the response in 1 + 512 + 2 byte blocks */
    for (size_t iblock = 0; iblock < blocks; iblock++) {
        SERCOM1->SPI.LENGTH.reg = (SERCOM_SPI_LENGTH_Type) { .bit.LENEN = 1, .bit.LEN = 1 }.reg;
        while (SERCOM1->SPI.SYNCBUSY.bit.LENGTH);

        uint8_t result;
        /* this can loop for a while */
        while (0xFF == (result = spi_receive_one_byte_with_rx_enabled()));

        /* when we break out of the above loop, we've read the Data Token byte */
        if (0xFE != result) {
            cs_high();
            return -1;
        }

        SERCOM1->SPI.LENGTH.reg = (SERCOM_SPI_LENGTH_Type) { .bit.LENEN = 0 }.reg;
        while (SERCOM1->SPI.SYNCBUSY.bit.LENGTH);

        uint32_t * restrict const block = ((uint32_t *)buf) + 128 * iblock;
        for (size_t iword = 0; iword < 128; iword++) {
            SERCOM1->SPI.DATA.bit.DATA = 0xffffffff;
            while (!SERCOM1->SPI.INTFLAG.bit.RXC);
            block[iword] = SERCOM1->SPI.DATA.bit.DATA;
        }

        while (!SERCOM1->SPI.INTFLAG.bit.TXC);
        SERCOM1->SPI.LENGTH.reg = (SERCOM_SPI_LENGTH_Type) { .bit.LENEN = 1, .bit.LEN = 2 }.reg;
        while (SERCOM1->SPI.SYNCBUSY.bit.LENGTH);

        /* read and discard two crc bytes */
        SERCOM1->SPI.DATA.bit.DATA = 0xFFFF;
        while (!SERCOM1->SPI.INTFLAG.bit.RXC);
        const uint16_t crc_swapped = SERCOM1->SPI.DATA.bit.DATA;
        (void)crc_swapped;
    }

    /* if we sent cmd18, send cmd12 to stop */
    if (blocks > 1) command_and_r1_response(12, 0);

    cs_high();
    return 0;
}
